--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,14 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.2",
-<<<<<<< HEAD
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/debug-bundle": "^5.1",
-=======
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
->>>>>>> master
         "symfony/dotenv": "5.1.*",
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
@@ -37,24 +34,18 @@
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
-<<<<<<< HEAD
         "symfony/security-csrf": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/stopwatch": "^5.1",
-=======
         "symfony/serializer": "5.1.*",
->>>>>>> master
         "symfony/string": "5.1.*",
         "symfony/translation": "5.1.*",
         "symfony/twig-bundle": "^5.1",
         "symfony/validator": "5.1.*",
-<<<<<<< HEAD
         "symfony/var-dumper": "^5.1",
         "symfony/web-link": "5.1.*",
         "symfony/web-profiler-bundle": "^5.1",
-=======
         "symfony/web-link": "5.1.*",
->>>>>>> master
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -62,17 +53,14 @@
     "require-dev": {
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
-<<<<<<< HEAD
         "symfony/maker-bundle": "^1.28",
-        "symfony/phpunit-bridge": "^5.1"
-=======
+        "symfony/phpunit-bridge": "^5.1",
         "symfony/debug-bundle": "^5.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/stopwatch": "^5.1",
         "symfony/var-dumper": "^5.1",
         "symfony/web-profiler-bundle": "^5.1"
->>>>>>> master
     },
     "config": {
         "optimize-autoloader": true,
